# marcgreppy

./: .gitignore  pyproject.toml  readme.md
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
marcgrep/: cli.py  color.py  filter.py  utils.py
test/: test_cli.py  test_filter.py  test_marcgrep.py  test_match.py
test/fixtures/: OAPEN.mrc  one_record.mrc  plain.txt  readme.md
