[project]
name = "marcgrep"
version = "2.0.0"
description = "search MARC files for regex matches"
authors = [{name = "Eric Phetteplace", email = "phette23@gmail.com"}]
license = "MIT"
readme = "readme.md"
keywords = ["marc", "grep", "regex", "libraries", "cli", "metadata", "bibliographic", "cataloging"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dependencies = [
    "click==8.4.2",
    "pymarc==5.3.1",
    "termcolor==3.3.0",
]
requires-python = ">=3.10"

[dependency-groups]
dev = [
    "pytest==9.1.1",
]

[project.scripts]
marcgrep = "marcgrep.cli:main"

[project.urls]
homepage = "https://github.com/phette23/marcgreppy"
issues = "https://github.com/phette23/marcgreppy/issues"
repository = "https://github.com/phette23/marcgreppy"

[tool.setuptools.packages.find]
where = ["marcgrep"]

[tool.uv.build-backend]
module-name = "marcgrep"
module-root = ""

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
